# BeliefBench-Python

./: .gitignore  LICENSE  README.md  SECURITY.md  pyproject.toml
beliefbench/: __init__.py  client.py
docs/: linkedin_post.txt
examples/: README.md  financial_case_study.yaml  financial_full.yaml  run_financial_case_study.py  run_financial_full.py
notebooks/: HostedAPIWalkthrough.ipynb
