[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "beliefbench"
version = "0.2.0"
description = "Thin Python SDK for the hosted BeliefBench API"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.10"
dependencies = ["httpx>=0.27", "PyYAML>=6.0"]

[project.urls]
Documentation = "https://github.com/mfrdixon/BeliefBench-Python"
Issues = "https://github.com/mfrdixon/BeliefBench-Python/issues"

[tool.setuptools.packages.find]
include = ["beliefbench*"]
